@@ -1,3 +1,12 @@
+2008-03-31  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_c_bars) docs/gnuplot.doc:  The docs state that if
+	(close > open) then the candlestick is drawn with 3 vertical bars.  This
+	is backwards.  The convention is that (close > open) is good, and the
+	box is empty; (close < open) is bad, and the box is filled. Correct the
+	documentation to match actual practice.  And correct the code so that
+	extra lines are drawn in the boder color for solid-fill candlesticks.
+
 2008-03-30  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/contour.c src/pm3d.c src/plot2d.c src/datafile.c src/parse.c:
